src/assets/css/style.css
/*
* ----------------------------------------------------------------------------------------
Author       : Syed
Template Name: Bentos - Personal Portfolio HTML Template
Version      : 1.0                                          
* ----------------------------------------------------------------------------------------
*/

/*
* ----------------------------------------------------------------------------------------
* 01.GLOBAL CSS STYLE
* 02.COMMON CSS STYLE
* 03.MENU CSS STYLE
* 04.HEADER CSS STYLE
* 05.ABOUT CSS STYLE
* 06.SERVICE CSS STYLE
* 07.SKILL CSS STYLE
* 08.RESUME CSS STYLE
* 09.PORTFOLIO CSS STYLE
* 10.TESTIMONIALS CSS STYLE
* 11.PRICING CSS STYLE
* 12.CLIENTS CSS STYLE
* 13.CONTACT CSS STYLE
* 14.FOOTER CSS STYLE
* 15.PRELOADER & BOUNCE CCS STYLE
* 16.BLOG CSS STYLE
* ----------------------------------------------------------------------------------------
*/


/*
* ----------------------------------------------------------------------------------------
* 01.GLOBAL STYLE
* ----------------------------------------------------------------------------------------
*/
:root {
    --main-color: #9f9f9f;
    --heading-color: #fff;
    --primary-color: #eb5d3a;
    --lighter-color: #ccc;
    --subtitle-color: #ccc;
    --black-color: #000;
    --border-color: rgba(119, 119, 125, .2);
    --button-border: rgba(119, 119, 125, .2);
    --body-background: #000;
    --grey-bg: #E6EAEE;
    --tj-black-2: #050505;
}

body.light-mode {
    --main-color: #2c3e50;      /* Dark Blue-Grey Text */
    --heading-color: #0c2461;   /* Deep Blue Headings */
    --lighter-color: #535c68;   
    --subtitle-color: #535c68;
    --black-color: #fff;
    --border-color: rgba(0,0,0,0.1);
    --button-border: rgba(0,0,0,0.1);
    --body-background: #f0f8ff; /* Alice Blue */
    --tj-black-2: #ffffff;
    --grey-bg: #e1f5fe;         /* Light Blue 50 */
    --card-bg: #ffffff;
    --icon-bg: #e1f5fe;         
    --social-bg: #ffffff;       
    --dark-bg-2: #b3e5fc;       /* Light Blue 100 */
    --bullet-bg: #0984e3;       /* Electron Blue */
    --border-light: rgba(45, 52, 54, 0.1);
    --input-bg: #ffffff;
    --input-border: #81ecec;
    
     /* Override primary color to blue for light mode */
     --primary-color: #0984e3; 
}

:root {
    --card-bg: #121214;
    --icon-bg: #1d1b1a;
    --social-bg: #0C0B0B;
    --dark-bg-2: #131313;
    --bullet-bg: #1D1B1A;
    --border-light: rgba(255, 255, 255, 0.05);
    --input-bg: #1a1a1a;
    --input-border: rgba(255, 255, 255, 0.1);
}

* {
    margin: 0;
    padding: 0;
    border: none;
    outline: none;
    box-shadow: none;
}

body {
    color: var(--main-color);
    background: var(--body-background);
    font-weight: 400;
    line-height: 30px;
    font-size: 16px;
    font-family: "Poppins", sans-serif;
    overflow-x: hidden;

}




.heading,
input,
select,
textarea,
.nice-select,
.form-control,
h1,
.h1,
h2,
.h2,
h3,
.h3,
h4,
.h4,
h5,
.h5,
h6,
.h6,
.accordion-item .accordion-button {
    color: var(--heading-color);
    font-family: "Poppins", sans-serif;
}

h1,
.h1 {
    font-size: 58px;
}

h2,
.h2 {
    font-size: 22px;
}

h3,
.h3 {
    line-height: 1.3;
    font-size: 30px;
}

h4,
.h4 {
    line-height: 1.1;
    font-size: 24px;
}

h5,
.h5 {
    line-height: 1.4;
    font-size: 20px;
}

h6,
.h6 {
    font-size: 16px;
}


p {
    line-height: 28px;
}

ul,
li {
    margin: 0;
    padding: 0;
}

fieldset {
    border: 0 none;
    margin: 0 auto;
    padding: 0;
}

.no-padding {
    padding: 0
}

a {
    color: var(--main-color);
    cursor: pointer;
    outline: none;
    -webkit-transition: 0.5s;
    transition: 0.5s;
    text-decoration: none;
    font-family: "Poppins", sans-serif;
}

a:hover,
a:focus,
a:visited {
    text-decoration: none;
    outline: none;
}

a:hover {
    color: var(--primary-color);
}



ul,
li {
    list-style: none;
    padding: 0;
    margin: 0;
}

img {
    max-width: 100%;
    display: inline-block;
}

mark {
    color: var(--primary-color);
    background: transparent;
    text-decoration: underline;
}

header:after,
section:after,
footer:after {
    display: block;
    clear: both;
    content: "";
}

input,
select,
textarea,
.nice-select,
.form-control {
    width: 100%;
    height: auto;
    border: none;
    font-size: 20px;
    border-radius: 0;
    padding: 20px 0;
    background-color: var(--input-bg);
    border-bottom: 2px solid var(--input-border);
}

input::-webkit-input-placeholder,
select::-webkit-input-placeholder,
textarea::-webkit-input-placeholder,
.nice-select::-webkit-input-placeholder,
.form-control::-webkit-input-placeholder {
    color: var(--heading-color);
    opacity: .4;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
}

input:-ms-input-placeholder,
select:-ms-input-placeholder,
textarea:-ms-input-placeholder,
.nice-select:-ms-input-placeholder,
.form-control:-ms-input-placeholder {
    color: var(--heading-color);
    opacity: .4;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
}

input::-ms-input-placeholder,
select::-ms-input-placeholder,
textarea::-ms-input-placeholder,
.nice-select::-ms-input-placeholder,
.form-control::-ms-input-placeholder {
    color: var(--heading-color);
    opacity: .4;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
}

input::-webkit-input-placeholder,
select::-webkit-input-placeholder,
textarea::-webkit-input-placeholder,
.nice-select::-webkit-input-placeholder,
.form-control::-webkit-input-placeholder {
    color: var(--heading-color);
    opacity: .4;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
}

input::-moz-placeholder,
select::-moz-placeholder,
textarea::-moz-placeholder,
.nice-select::-moz-placeholder,
.form-control::-moz-placeholder {
    color: var(--heading-color);
    opacity: .4;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
}
/* ... */

